--- a/Views/Directors/Index.cshtml
+++ b/Views/Directors/Index.cshtml
@@ -1,12 +1,11 @@
 ﻿@model IEnumerable<MvcMovie.Models.Director>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Director";
 }
-
-<h1>Index</h1>
-
+<div class="jumbotron"><h1>DIRECTORS</h1></div>
 <p>
+    
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
@@ -19,17 +18,18 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
