--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,25 @@
     ViewData["Title"] = "Home Page";
 }
 
+
+
+
+
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-   <div class="jumbotron">This is a movie listings web application</div>
+    <h1 class="display-4">Welcome :)</h1>
+    <br />
+    <div class="jumbotron">This is a movie listings web application</div>
+
+   <style>
+       .img {
+           background-image: url('file:///C:\Users\I am a Lutheran\Source\Repos\ADET_prelim_Garcia_Brexter\wwwroot\css\movie.jpeg');
+           background-size: cover;
+           background-repeat: no-repeat;
+           background-position: center center;
+       }
+   </style>
+    <div class="img">
+
+    </div>
+ 
 </div>
