--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -1,71 +1,90 @@
 ﻿@model MovieGenreViewModel
 
-@{
-    ViewData["Title"] = "Index";
-}
+@{ ViewData["Title"] = "Index"; }
+<style>
+    .table {
+        background-color: whitesmoke;
+        border-radius: 20px;
+        color: black;
+    }
 
-<h1>Index</h1>
+    .mname {
+        background-image: url(/css/watching.png);
+        position: relative;
+        bottom: -25px;
+        left: -210px;
+        background-repeat: no-repeat;
+        width: 200px;
+        height: 200px;
+        background-size: 200px;
+    }
+</style>
+<div class="jumbotron">
+    <h1>Movie List</h1></div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-
-<form asp-controller="Movies" asp-action="Index" method="get">
     <p>
-        <select asp-for="MovieGenre" asp-items="Model.Genres">
-            <option value="">All</option>
-        </select>
-
-        Title: <input type="text" name="SearchString" />
-        <input type="submit" value="Filter" />
+        <a asp-action="Create">Create New</a>
     </p>
-</form>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Movies[0].Title)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Movies[0].ReleaseDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Movies[0].Genre)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Movies[0].Price)
-            </th>
-            <th>@Html.DisplayNameFor(m => m.Movies[0].Rating)</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Movies) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ReleaseDate)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
-            <td>
-                @Html.DisplayFor(model => item.Rating)
-            </td>
-            <td>
-                <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
-                    <a class="btn btn-small btn-success" asp-action="Edit" asp-route-id="@item.ID">Edit</a> 
-                    <a class="btn btn-small btn-secondary" asp-action="Details" asp-route-id="@item.ID">Details</a> 
-                    <a class="btn btn-small btn-danger" asp-action="Delete" asp-route-id="@item.ID">Delete</a>
-                </div>
-              
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+    <form asp-controller="Movies" asp-action="Index" method="get">
+        <p>
+            <select asp-for="MovieGenre" asp-items="Model.Genres">
+                <option value="">All</option>
+            </select>
+
+            Title: <input type="text" name="SearchString" />
+            <input type="submit" value="Filter" />
+        </p>
+    </form>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.Movies[0].Title)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Movies[0].ReleaseDate)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Movies[0].Genre)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Movies[0].Price)
+                </th>
+                <th>@Html.DisplayNameFor(m => m.Movies[0].Rating)</th>
+                <th></th>
+            </tr>
+        </thead>
+
+        <tbody>
+            @foreach (var item in Model.Movies)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Title)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.ReleaseDate)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Genre)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Price)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(model => item.Rating)
+                    </td>
+                    <td>
+                        <div class="btn-group btn-group-sm" role="group" aria-label="Basic example">
+                            <a class="btn btn-small btn-success" asp-action="Edit" asp-route-id="@item.ID">Edit</a>
+                            <a class="btn btn-small btn-secondary" asp-action="Details" asp-route-id="@item.ID">Details</a>
+                            <a class="btn btn-small btn-danger" asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                        </div>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+    <div class="mname">
+    </div>
